assets/css/3-sections/_experiences.sass
//html, body, .container
//  height: 100%

//body
//  font-family: 'tai le'
//  font-size: 14px

.container
  display: flex
  justify-content: center
  align-items: center
  background-color: #fff
  flex-direction: column

//.title
//  font-size: 38px
//  color: #616161
//  font-style: italic
//  font-weight: 800

.timeline
  margin: 0px auto
  padding-bottom: 100px
  +clearfix
  max-width: 900px
  width: 100%
  //background-color: #fff
  //box-shadow: 0 5px 25px 5px rgba(0, 0, 0, 0.2)
  .swiper-container
    height: 600px
    width: 100%
    position: relative
  .swiper-wrapper
    transition: 2s cubic-bezier(0.68, -0.4, 0.27, 1.34) 0.2s
  .swiper-slide
    position: relative
    color: #fff
    overflow: hidden
    background-size: 100% 100%
    background-repeat: no-repeat
    background-position: center center
    &::after
      content: ""
      position: absolute
      z-index: 1
      right: -115%
      bottom: -10%
      width: 100%
      height: 100%
      background-color: rgba(0, 0, 0, 0.7)
      box-shadow: -230px 0 150px 60vw rgba(0, 0, 0, 0.7)
      border-radius: 100%
  .swiper-slide-content
    position: absolute
    text-align: center
    width: 80%
    max-width: 310px
    right: 50%
    top: 13%
    -webkit-transform: translate(50%, 0)
    transform: translate(50%, 0)
    font-size: 12px
    z-index: 2
  .swiper-slide
    .timeline-year
      display: block
      font-style: italic
      font-size: 30px
      margin-bottom: 50px
      -webkit-transform: translate3d(20px, 0, 0)
      transform: translate3d(20px, 0, 0)
      font-weight: 300
      opacity: 0
      transition: .2s ease .4s
      color: $gold
    .timeline-title
      font-weight: 800
      font-size: 34px
      margin: 0 0 30px
      opacity: 0
      -webkit-transform: translate3d(20px, 0, 0)
      transform: translate3d(20px, 0, 0)
      transition: .2s ease .5s
      color: $gold
    .timeline-text
      line-height: 1.5
      opacity: 0
      -webkit-transform: translate3d(20px, 0, 0)
      transform: translate3d(20px, 0, 0)
      transition: .2s ease .6s
  .swiper-slide-active
    .timeline-year
      opacity: 1
      -webkit-transform: translate3d(0, 0, 0)
      transform: translate3d(0, 0, 0)
      transition: .4s ease 1.6s
    .timeline-title
      opacity: 1
      -webkit-transform: translate3d(0, 0, 0)
      transform: translate3d(0, 0, 0)
      transition: .4s ease 1.7s
    .timeline-text
      opacity: 1
      -webkit-transform: translate3d(0, 0, 0)
      transform: translate3d(0, 0, 0)
      transition: .4s ease 1.8s
  .swiper-pagination
    //right: 15% !important
    height: 100%
    display: none
    flex-direction: column
    justify-content: center
    font-style: italic
    font-weight: 300
    font-size: 18px
    z-index: 1
    &::before
      content: ""
      position: absolute
      left: -30px
      top: 0
      height: 100%
      width: 1px
      background-color: rgba(255, 255, 255, 0.2)
  .swiper-pagination-bullet
    width: auto
    height: auto
    text-align: center
    opacity: 1
    background: transparent
    color: $gold
    margin: 15px 0 !important
    position: relative
    font-family: "tai le"
    &::before
      content: ""
      position: absolute
      top: 8px
      left: -32.5px
      width: 6px
      height: 6px
      border-radius: 100%
      background-color: $gold
      -webkit-transform: scale(0)
      transform: scale(0)
      transition: .2s
  .swiper-pagination-bullet-active
    color: $gold
    &::before
      -webkit-transform: scale(1)
      transform: scale(1)
  .swiper-button-next
    background-size: 20px 20px
    //top: 10%
    width: 20px
    height: 20px
    margin-top: 0
    z-index: 2
    transition: .2s
  .swiper-button-prev
    background-size: 20px 20px
    top: 10%
    width: 20px
    height: 20px
    margin-top: 0
    z-index: 2
    transition: .2s
    left: 8%
    background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg%20xmlns%3D'http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg'%20viewBox%3D'0%200%2027%2044'%3E%3Cpath%20d%3D'M0%2C22L22%2C0l2.1%2C2.1L4.2%2C22l19.9%2C19.9L22%2C44L0%2C22L0%2C22L0%2C22z'%20fill%3D'%23d4a024'%2F%3E%3C%2Fsvg%3E")
    &:hover
      -webkit-transform: translateX(-3px)
      transform: translateX(-3px)
  .swiper-button-next
    right: 8%
    background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg%20xmlns%3D'http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg'%20viewBox%3D'0%200%2027%2044'%3E%3Cpath%20d%3D'M27%2C22L27%2C22L5%2C44l-2.1-2.1L22.8%2C22L2.9%2C2.1L5%2C0L27%2C22L27%2C22z'%20fill%3D'%23d4a024'%2F%3E%3C%2Fsvg%3E")
    &:hover
      -webkit-transform: translateX(3px)
      transform: translateX(3px)

@media screen and (min-width: 768px)
  .timeline
    .swiper-slide::after
      right: -30%
      bottom: -8%
      width: 240px
      height: 50%
      box-shadow: -230px 0 150px 50vw rgba(0, 0, 0, 0.7)
    .swiper-slide-content
      right: 30%
      top: 50%
      -webkit-transform: translateY(-50%)
      transform: translateY(-50%)
      width: 310px
      font-size: 11px
      text-align: right
    .swiper-slide
      .timeline-year
        margin-bottom: 0
        font-size: 26px
      .timeline-title
        font-size: 32px
        margin: 0
    .swiper-pagination
      display: flex
    .swiper-button-prev
      top: 10%
      left: auto
      right: 15%
      -webkit-transform: rotate(90deg) translate(0, 10px)
      transform: rotate(90deg) translate(0, 10px)
      &:hover
        -webkit-transform: rotate(90deg) translate(-3px, 10px)
        transform: rotate(90deg) translate(-3px, 10px)
    .swiper-button-next
      top: auto
      bottom: 10%
      right: 15%
      -webkit-transform: rotate(90deg) translate(0, 10px)
      transform: rotate(90deg) translate(0, 10px)
      &:hover
        -webkit-transform: rotate(90deg) translate(3px, 10px)
        transform: rotate(90deg) translate(3px, 10px)

@media screen and (min-width: 1024px)
  .timeline
    .swiper-slide::after
      right: -20%
      bottom: -12%
      width: 240px
      height: 50%
      box-shadow: -230px 0 150px 39vw rgba(0, 0, 0, 0.7)
    .swiper-slide-content
      right: 25%

